--- a/backend/env.example
+++ b/backend/env.example
@@ -32,6 +32,7 @@ DEBUG=true
 OPENAI_API_KEY="sk-your-openai-api-key-here"
 ANTHROPIC_API_KEY="your-anthropic-api-key-here"
 GOOGLE_API_KEY="your-google-api-key-here"
+GEMINI_API_KEY="your-gemini-api-key-here"
 STRIPE_SECRET_KEY="sk_test_your-stripe-secret-key-here"
 SENDGRID_API_KEY="SG.your-sendgrid-api-key-here"
 TWILIO_ACCOUNT_SID="ACxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
