--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -18,6 +18,7 @@ google-cloud-vision
 google-auth
 google-generativeai
 librosa
+python-socketio[asyncio]
 pydub
 google-cloud-speech==2.27.0
 google-cloud-texttospeech==2.28.0
